# LivePilotAI

./: .gitignore  .pre-commit-config.yaml  DAILY_PROGRESS_TRACKING_DAY3.md  DAY3_PROJECT_COMPLETENESS_REVIEW.md  DAY4_INSTANCE_TEST_EXECUTION_REPORT.md  DAY5_EXECUTION_PLAN.md  DAY5_USER_GUIDE.md  DEPENDENCY_CHECK_COMPLETION_REPORT.md  DEVELOPMENT_DAY3_PROGRESS_REPORT.md  Dockerfile  EMOTION_ENGINE_GUIDE.md  INSTALL_DEPENDENCIES.md  LivePilotAI.spec  MODULAR_REFACTORING_FINAL_REPORT.md  MODULAR_REFACTORING_SUCCESS_REPORT.md  OBS.json  PROJECT_COMPLETION_REPORT.md  PROJECT_PROGRESS_DASHBOARD.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RELEASE_NOTES_DAY5.md  basic_test.py  complete_emotion_test.py  core_test.py  detailed_import_test.py  diagnose.py  emergency_fix.bat  emergency_launcher.py  emotion_mappings.json  final_verification_test.py  fix_issues.ps1  hello_test.py  launcher_fixed.py  livepilotai_config.json  main.py  main_fixed.py  modular_architecture_usage_examples.py  obs_test_simple.py  pyproject.toml  (+22 more)
.context/: architecture.md  coding_style.md
.github/: copilot-instructions.md
Archives/: BUG_FIX_REPORT.md  bug_fix_report.json  bug_fix_test.py  check_camera_ports.py  check_mediapipe.py  check_mediapipe_deep.py  livepilotai_status_report_1749561400.json  livepilotai_status_report_1749607938.json  simple_test_output.txt  system_diagnostic.py  test_system.py
config/: current.yml  development.yml  testing.yml
demos/: demo_advanced.py  demo_basic.py  demo_features.py
docs/: API.md  CHANGELOG.md  CLASS_DIAGRAM_ANALYSIS.md  EMERGENCY_FIX_GUIDE.md  (+14 more)
(+132 files in other folders)
